--- a/Algora/Server/package.json
+++ b/Algora/Server/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-sdk-node": "^5.0.12",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.4"
   }
