--- a/Algora/Client/package.json
+++ b/Algora/Client/package.json
@@ -3,22 +3,28 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite --host 0.0.0.0",
+  "build": "vite build",
+  "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview"
+},
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@clerk/clerk-react": "^5.28.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@nlux/core": "^2.13.2",
     "@tremor/react": "^3.17.4",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.5.1",
     "react-speech-recognition": "^3.10.0",
     "web-speech-cognitive-services": "^7.1.3"
   },
