--- a/Algora/Client/Dockerfile
+++ b/Algora/Client/Dockerfile
@@ -12,7 +12,7 @@ RUN npm install
 COPY . .
 
 # Expose the port
-EXPOSE 3000
+EXPOSE 5173
 
 # Start the development server instead of building
-CMD ["npm", "run", "dev", "--", "--host"] 
+CMD ["npm", "run", "dev"] 
